feat: binance average extracted
